@@ -19,6 +19,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #19324: Expose Linux-specific constants in resource module.
+
 - Issue #17400: ipaddress should make it easy to identify rfc6598 addresses.
 
 - Load SSL's error strings in hashlib.
